WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71857
MHTML always use Base64 encoding (instead of QuotedPrintable for text)
https://bugs.webkit.org/show_bug.cgi?id=71857
Summary
MHTML always use Base64 encoding (instead of QuotedPrintable for text)
Jay Civelli
Reported
2011-11-08 14:31:36 PST
When generating a MHTML archive and binary encoding is not used, all resources are encoded in Base64. Text resources should use QuotedPrintable instead. This bug was introduced in my previous change that added binary encoding support:
https://bugs.webkit.org/show_bug.cgi?id=63310
Attachments
Patch
(1.91 KB, patch)
2011-11-08 14:37 PST
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Patch
(9.42 KB, patch)
2011-11-09 11:05 PST
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Patch
(9.42 KB, patch)
2011-11-09 11:08 PST
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2011-11-08 14:37:41 PST
Created
attachment 114156
[details]
Patch
Adam Barth
Comment 2
2011-11-08 16:05:38 PST
Comment on
attachment 114156
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114156&action=review
Test?
> Source/WebCore/loader/archive/mhtml/MHTMLArchive.cpp:181 > + const char* contentEncoding;
Please initialize scalars.
Jay Civelli
Comment 3
2011-11-09 11:05:42 PST
Created
attachment 114317
[details]
Patch
Jay Civelli
Comment 4
2011-11-09 11:08:52 PST
Created
attachment 114318
[details]
Patch
Jay Civelli
Comment 5
2011-11-09 11:10:10 PST
(In reply to
comment #2
)
> (From update of
attachment 114156
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=114156&action=review
> > Test?
Added a Chromium unit-test (as this cannot be tested with a LayoutTest).
> > Source/WebCore/loader/archive/mhtml/MHTMLArchive.cpp:181 > > + const char* contentEncoding; > > Please initialize scalars.
Done.
Adam Barth
Comment 6
2011-11-09 13:34:40 PST
Comment on
attachment 114318
[details]
Patch Thanks!
WebKit Review Bot
Comment 7
2011-11-09 15:14:16 PST
Comment on
attachment 114318
[details]
Patch Clearing flags on attachment: 114318 Committed
r99766
: <
http://trac.webkit.org/changeset/99766
>
WebKit Review Bot
Comment 8
2011-11-09 15:14:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug