Fix MHTML generation to use the QuotedPrintable encoding for text resources. This was regressed when we added binary encoding support. https://bugs.webkit.org/show_bug.cgi?id=71857

Reviewed by Adam Barth.

Source/WebCore:

* loader/archive/mhtml/MHTMLArchive.cpp:
(WebCore::MHTMLArchive::generateMHTMLData):

Source/WebKit/chromium:

* tests/WebPageNewSerializerTest.cpp:
(WebKit::LineReader::LineReader):
(WebKit::LineReader::getNextLine):
(WebKit::WebPageNewSerializeTest::setUpCSSTestPage):
(WebKit::TEST_F):


Canonical link: https://commits.webkit.org/88331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99766 268f45cc-cd09-0410-ab3c-d52691b4dbfc